* Rename KademliaException to DhtException; in DHT, throw DhtException instead of Exception * Drop Comparable from I2PSendQueue.ScheduledPacket * Remove an unneccessary "throws" * Fix some minor issues found by FindBugs:   - Don't ignore return values of File.mkdir, File.renameTo, etc.   - Close open files even if an exception happens   - Use Integer.valueOf instead of the Integer constructor   - Make some inner classes static   - Remove an unused method from UniqueId   - Make two fields volatile